[#38899409] Update codemirror to fix vertical scroll bar issue.  Remove style to fix horizontal scroll bar issue.

--- a/app/assets/stylesheets/workfiles/_workfile_show.scss
+++ b/app/assets/stylesheets/workfiles/_workfile_show.scss
@@ -91,7 +91,6 @@
     .CodeMirror-scroll {
         height: auto;
         overflow-y: visible;
-        overflow-x: auto;
         width: 100%;
     }
 
